--- a/views/partials/dashboard.html
+++ b/views/partials/dashboard.html
@@ -169,6 +169,17 @@
         <span class="ts-income-row-actual" id="income-actual-net-value"></span>
         <span class="ts-income-row-est" id="income-net">--</span>
       </div>
+      <div id="hourly-rate-divider" class="ts-income-divider" hidden></div>
+      <div class="ts-income-row" id="hourly-rate-gross-row" hidden>
+        <span class="ts-income-row-label">Gross income hourly rate based on <span id="hourly-rate-gross-label">--</span>:</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-hourly-rate-gross">--</span>
+      </div>
+      <div class="ts-income-row" id="hourly-rate-net-row" hidden>
+        <span class="ts-income-row-label">Net income hourly rate based on <span id="hourly-rate-net-label">--</span>:</span>
+        <span class="ts-income-row-actual"></span>
+        <span class="ts-income-row-est" id="income-hourly-rate-net">--</span>
+      </div>
     </div>
     <div class="ts-expected-breakdown" id="expected-hours-breakdown" hidden>
       <div id="expected-hours-content"></div>
