--- a/views/partials/hourtypes.html
+++ b/views/partials/hourtypes.html
@@ -67,6 +67,18 @@
           </span>
         </label>
       </div>
+      <div class="ts-flag-row" style="margin-top:16px;">
+        <div class="ts-flag-meta">
+          <div class="ts-flag-title">Use for hourly rate calculation</div>
+          <div class="ts-flag-desc">When enabled, this hour type's hours are used to calculate effective hourly rates in annual views and income breakdown.</div>
+        </div>
+        <label class="ts-toggle">
+          <input type="checkbox" id="hour-type-use-for-rate-calc" />
+          <span class="ts-toggle-track">
+            <span class="ts-toggle-thumb"></span>
+          </span>
+        </label>
+      </div>
       <div class="ts-flag-row" id="hour-type-holiday-toggle-row" style="margin-top:16px; display:none;">
         <div class="ts-flag-meta">
           <div class="ts-flag-title">Auto-populate weekday public holidays</div>
