--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -47,7 +47,7 @@
           </select>
         </div>
         <div id="minimum-end-time-col" style="display:none;">
-          <label>Minimum End Time</label>
+          <label>Suggested Minimum End Time <span class="ts-info-icon" title="Used as your ideal finish time when the Suggest End Time flag is on. The advanced entry view recommends when to clock off based on this value and your round-to-nearest setting.">i</span></label>
           <input type="time" id="set-minimum-end-time" />
         </div>
       </div>
