Add rate preview page

--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     <main class="ts-container ts-container--fluid">
       <?!= include('views/partials/dashboard'); ?>
       <?!= include('views/partials/contracts'); ?>
+      <?!= include('views/partials/ratepreview'); ?>
       <?!= include('views/partials/hourtypes'); ?>
       <?!= include('views/partials/deductions'); ?>
       <?!= include('views/partials/bas'); ?>
